@@ -57,7 +57,6 @@ my @basebd = (
     'python-dbus',
     'python-gi-cairo',
     'python-gi-dev',
-    'python-libxml2',
     'python-mock (>= 0.7.0)',
     'python-pyicu (>= 1.0)',
     'python-scour',
