@@ -3,7 +3,7 @@ Section: admin
 Priority: optional
 Maintainer: Ubuntu Installer Team <ubuntu-installer@lists.ubuntu.com>
 Uploaders: Colin Watson <cjwatson@ubuntu.com>, Evan Dandrea <ev@ubuntu.com>
-Build-Depends: apt, bf-utf-source, dctrl-tools, debconf (>= 0.5.0), debconf-utils, debhelper (>= 9), dh-di (>= 3), dpkg-dev (>= 1.14.4), gir1.2-soup-2.4, gir1.2-timezonemap-1.0, gir1.2-xkl-1.0, gnome-icon-theme, gobject-introspection, intltool (>= 0.40.0), intltool-debian (>= 0.30+20040212), iso-codes, isoquery, keymapper (>= 0.5.3-7), libbogl-dev, libcairo2-dev, libdebconfclient0-dev (>= 0.68), libdebian-installer4-dev (>= 0.76), libgirepository1.0-dev, libglib2.0-dev, libgstreamer-plugins-base0.10-dev (>= 0.10.23), libgtk-3-dev, libgudev-1.0-dev, libindicator3-dev, libiw-dev (>= 27+28pre9), liblocale-gettext-perl, libparted-dev, libparted0-dev (>= 2.2), libxml2-dev (>= 2.6.24), locales, pkg-config, po-debconf (>= 1.0), pyflakes, python-all (>= 2.6.6-3~), python-apt (>= 0.7.100.3~), python-cairo, python-dbus, python-gi-cairo, python-gi-dev, python-libxml2, python-mock (>= 0.7.0), python-pyicu (>= 1.0), python-scour, python-six, tzdata, ubuntu-artwork, udev, wget, xkb-data (>= 0.9), xkb-data-i18n, xvfb
+Build-Depends: apt, bf-utf-source, dctrl-tools, debconf (>= 0.5.0), debconf-utils, debhelper (>= 9), dh-di (>= 3), dpkg-dev (>= 1.14.4), gir1.2-soup-2.4, gir1.2-timezonemap-1.0, gir1.2-xkl-1.0, gnome-icon-theme, gobject-introspection, intltool (>= 0.40.0), intltool-debian (>= 0.30+20040212), iso-codes, isoquery, keymapper (>= 0.5.3-7), libbogl-dev, libcairo2-dev, libdebconfclient0-dev (>= 0.68), libdebian-installer4-dev (>= 0.76), libgirepository1.0-dev, libglib2.0-dev, libgstreamer-plugins-base0.10-dev (>= 0.10.23), libgtk-3-dev, libgudev-1.0-dev, libindicator3-dev, libiw-dev (>= 27+28pre9), liblocale-gettext-perl, libparted-dev, libparted0-dev (>= 2.2), libxml2-dev (>= 2.6.24), locales, pkg-config, po-debconf (>= 1.0), pyflakes, python-all (>= 2.6.6-3~), python-apt (>= 0.7.100.3~), python-cairo, python-dbus, python-gi-cairo, python-gi-dev, python-mock (>= 0.7.0), python-pyicu (>= 1.0), python-scour, python-six, tzdata, ubuntu-artwork, udev, wget, xkb-data (>= 0.9), xkb-data-i18n, xvfb
 Standards-Version: 3.6.2.1
 X-Python-Version: >= 2.7
 Vcs-Bzr: http://bazaar.launchpad.net/~ubuntu-installer/ubiquity/trunk
@@ -43,7 +43,7 @@ Description: Ubuntu artwork for Ubiquity live installer
 
 Package: ubiquity-frontend-gtk
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}, ubiquity (= ${binary:Version}), python-dbus, gir1.2-gtk-3.0, gir1.2-gdkpixbuf-2.0, gir1.2-gstreamer-0.10, gir1.2-soup-2.4, gir1.2-vte-2.90, gir1.2-webkit-3.0, iso-codes, x-window-manager, gksu, gir1.2-xkl-1.0, gir1.2-timezonemap-1.0, python-libxml2, python-cairo, python-gi-cairo, gir1.2-appindicator3-0.1, gstreamer0.10-plugins-good, busybox-static | busybox
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}, ubiquity (= ${binary:Version}), python-dbus, gir1.2-gtk-3.0, gir1.2-gdkpixbuf-2.0, gir1.2-gstreamer-0.10, gir1.2-soup-2.4, gir1.2-vte-2.90, gir1.2-webkit-3.0, iso-codes, x-window-manager, gksu, gir1.2-xkl-1.0, gir1.2-timezonemap-1.0, python-cairo, python-gi-cairo, gir1.2-appindicator3-0.1, gstreamer0.10-plugins-good, busybox-static | busybox
 Suggests: gnome-control-center
 Conflicts: ubuntu-express-frontend-gtk, espresso-frontend-gtk, ubiquity (<< 2.4.3)
 Replaces: ubuntu-express-frontend-gtk, espresso-frontend-gtk, ubiquity (<< 2.4.3)
